...
    fun setAssumePlainTextValues() {
        this.assumePlainTextValues = true
    }

    companion object {
        private const val KEY_FORCE_XPATH_PARSING = "force_xpath_parsing"
        private const val KEY_FORCE_XPATH_PARSING_VALUE_TRUE = "yes"
    }
}

